--- a/index.scss
+++ b/index.scss
@@ -1,9 +1,14 @@
-// nib retail.
-$nib-retail-green: #79BE10;
-$nib-retail-shadow: #5D9803;
+/* 
+ * Colors values are for reference only.
+ * Hard code CSS colors where needed.
+ */
 
-// nib Options.
+/* nib retail.
+$nib-retail-green: #79BE10;
+$nib-retail-shadow: #5D9803; */
+
+/* nib Options.
 $nib-options-green: #019771;
 $nib-options-green-secondary: #72D2C3;
 $nib-options-text: #666666;
-$nib-options-text-highlight: #004D34;
+$nib-options-text-highlight: #004D34; */
